--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 
 <head>
-    <title>Rosangela de Fátima Pereira Marquesone</title>
+    <title>Guilherme Grilo Luche</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h1>Rosangela de Fátima Pereira Marquesone</h1>
+    <h1 class="header-title">Guilherme Grilo Luche</h1>
 
-    <ul>
+    <ul id="contact-info">
         <li>E-mail: <a href="mailto:luche@alunos.utfpr.edu.br">luche@alunos.utfpr.edu.br</a></li>
         <li>LinkedIn: <a
                 href="https://www.linkedin.com/in/guilherme-lucke/">https://www.linkedin.com/in/guilherme-lucke/</a>
@@ -16,13 +17,13 @@
         <li>Cornélio Procópio, Paraná</li>
     </ul>
 
-    <h2>Resumo</h2>
+    <h2 class="section-title">Resumo</h2>
     <p>Estudante de engenharia de computação da Universidade Tecnológica Federal do Paraná, Campus Cornélio Procópio
         (UTFPR-CP).</p>
     <p>Seus principais interesses de pesquisa são: big data, engenharia de dados e python. Também se interessa por temas
         como programação nocode.</p>
 
-    <h2>Habilidades</h2>
+    <h2 class="section-title">Habilidades</h2>
     <ol>
         <li>Desenvolvimento Web Front-end</li>
         <li>Python</li>
@@ -30,24 +31,24 @@
         <li>SQL</li>
     </ol>
 
-    <h2>Educação</h2>
+    <h2 class="section-title">Educação</h2>
     <p>Graduação em Engenharia de Computação<br>
         UTFPR-CP<br>
         2021 - 2025</p>
 
-    <h2>Hobbies</h2>
+    <h2 class="section-title">Hobbies</h2>
     <ul>
         <li>Leitura</li>
         <li>Videos-games</li>
         <li>Filmes e Séries</li>
     </ul>
 
-    <h2>Links adicionais</h2>
+    <h2 class="section-title">Links adicionais</h2>
     <ul>
-        <li><a href="https://github.com/guilherme-lucke">Perfil do Github</a></li>
+        <li><a href="https://github.com/guilherme-lucke" class="link">Perfil do Github</a></li>
     </ul>
 
-    <p>CV - Guilherme LucKe - 2024</p>
+    <p class="footer-text">CV - Guilherme Lucke - 2024</p>
 </body>
 
 </html>
